Adding default icon

--- a/scenarioNodes/package.json
+++ b/scenarioNodes/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "alicecore",
 	"version": "0.0.5",
+	"icon": "battle-net",
 	"description": "Alice Core nodes",
 	"dependencies": {},
 	"author": "Psycho",
