--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,6 +9,9 @@ jobs:
   test:
     name: Run tests
     runs-on: ubuntu-latest
+    env:
+      GITHUB_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
     steps:
       - name: Checkout
@@ -31,7 +34,4 @@ jobs:
         with:
           path: '.'
       - name: Sonarcloud scan
-        uses: SonarSource/sonarcloud-github-action@v1.4
-        env:
-          GITHUB_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        uses: SonarSource/sonarcloud-github-action@master
