- Renamed sendMessage Node - Add payload injection capabilities to say node and also added instructions - Add the do not announce your offline if sleeping code to the b4 branch

--- a/scenarioNodes/package.json
+++ b/scenarioNodes/package.json
@@ -16,7 +16,7 @@
       "onAliceEvent": "onAliceEvent.js",
       "sendMsg": "sendMsg.js",
       "say": "say.js",
-      "sendMessage": "sendMessage.js"
+      "triggerAction": "triggerAction.js"
     }
 	},
 	"devDependencies": {}
