--- a/scenarioNodes/package.json
+++ b/scenarioNodes/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "alicecore",
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"category": "projectalice",
 	"dependencies": {
 		"is-utf8": "^0.2.1",
@@ -14,6 +14,7 @@
 		"nodes": {
       "aliceMqtt": "aliceMqtt.js",
       "onAliceEvent": "onAliceEvent.js",
+      "onAliceCustomEvent": "onAliceCustomEvent.js",
       "sendMsg": "sendMsg.js",
       "say": "say.js",
       "triggerAction": "triggerAction.js"
