sayRandom Node added + Alice Icon for inputs

--- a/scenarioNodes/package.json
+++ b/scenarioNodes/package.json
@@ -17,6 +17,7 @@
       "onAliceCustomEvent": "onAliceCustomEvent.js",
       "sendMsg": "sendMsg.js",
       "say": "say.js",
+      "sayRandom": "sayRandom.js",
       "triggerAction": "triggerAction.js"
     }
 	},
