--- a/scenarioNodes/package.json
+++ b/scenarioNodes/package.json
@@ -1,24 +1,27 @@
 {
 	"name": "alicecore",
-	"version": "1.1.2",
+	"version": "1.1.3",
 	"category": "projectalice",
 	"dependencies": {
 		"is-utf8": "^0.2.1",
 		"mqtt": "^4.2.1",
 		"url": "^0.11.0",
-		"https-proxy-agent": "^5.0.0"
-	},
+		"https-proxy-agent": "^5.0.0",
+    "multiple-select": "^1.5.2",
+    "axios": "^0.26.0"
+  },
 	"author": "Psycho",
 	"license": "GPLv3",
 	"node-red": {
 		"nodes": {
       "aliceMqtt": "aliceMqtt.js",
       "onAliceEvent": "onAliceEvent.js",
-      "onAliceCustomEvent": "onAliceCustomEvent.js",
       "sendMsg": "sendMsg.js",
       "say": "say.js",
+      "triggerAction": "triggerAction.js",
+      "onAliceCustomEvent": "onAliceCustomEvent.js",
       "sayRandom": "sayRandom.js",
-      "triggerAction": "triggerAction.js"
+      "aliceConnection": "aliceConnection.js"
     }
 	},
 	"devDependencies": {}
