new NR Node: onAliceIntent for selecting custom created Intents from dropdown

--- a/scenarioNodes/package.json
+++ b/scenarioNodes/package.json
@@ -21,7 +21,8 @@
       "triggerAction": "triggerAction.js",
       "onAliceCustomEvent": "onAliceCustomEvent.js",
       "sayRandom": "sayRandom.js",
-      "aliceConnection": "aliceConnection.js"
+      "aliceConnection": "aliceConnection.js",
+      "onAliceIntent": "onAliceIntent.js"
     }
 	},
 	"devDependencies": {}
