--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,9 +9,6 @@ jobs:
   test:
     name: Run tests
     runs-on: ubuntu-latest
-    env:
-      GITHUB_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
-      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
     steps:
       - name: Checkout
@@ -33,6 +30,8 @@ jobs:
         uses: jpetrucciani/mypy-check@master
         with:
           path: '.'
+          requirements_file: 'mypy_requirements.txt'
+          python_version: '3.7'
       - name: Sonarcloud scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
